Finalized CSS/HTML.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+
 <body>
     <header>
         <div id="highScores" class="scores">View High Scores</div>
         <div id="timer" class="time">Time: 75</div>
     </header>
     <main>
-            <div id="question">Try to answer the code-related questions within the time-limit. Keep in mind that incorrect answers will be penalized score/time 10 seconds.</div>
-                <button id="btn" class="quizBtn"></button>
-            <div id="result"></div>
+        <div id="question" class="quiz">
+            <h1 id="headline"><span>Coding Quiz Challenge</span></h1>
+            <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+            <div><button id="btn" class="quizBtn">Take Quiz</button></div>
+        </div>
+        <div id="result"></div>
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
