--- a/index.html
+++ b/index.html
@@ -14,12 +14,37 @@
         <div id="timer" class="time">Time: 75</div>
     </header>
     <main>
-        <div id="question" class="quiz">
-            <h1 id="headline"><span>Coding Quiz Challenge</span></h1>
-            <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-            <div><button id="btn" class="quizBtn">Take Quiz</button></div>
+        <div id="startQuiz" class="welcome">
+            <h1 id="question"><span>Coding Quiz Challenge</span></h1>
+            <p id="welcome">Try to answer the following code-related questions within the time limit. Keep in mind that
+                incorrect answers will penalize your score/time by ten seconds!</p>
+            <div class="welcomeBtn"><button id="btn" class="quizBtn">Take Quiz</button></div>
         </div>
-        <div id="result"></div>
+
+        <div id="takeQuiz" class="quizContent">
+            <div id="quizQuestions" class="quizQuestions">
+                <h1 id="question">Question goes here</h1>
+                <div><button id="btn" class="quizBtn">answer</button></div>
+                <div><button id="btn" class="quizBtn">answer</button></div>
+                <div><button id="btn" class="quizBtn">answer</button></div>
+                <div><button id="btn" class="quizBtn">answer</button></div>
+            </div>
+
+
+            <div id="done" class="done">
+                <form>
+                    <h1 id="question">All done!</h1>
+                    <p>Your final score is <span="id"></span>.</p>
+                    <p>Enter initials 
+                        <input type="text" id="inputInitials" name="inputInitials">
+                        <button  class="initialBtn">Submit</button></p>
+                </form>
+            </div>
+            <div id="result" class="result">
+                <hr>
+                <p class="result">Wrong!</p>
+            </div>
+        </div>
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
