quiz function started.

--- a/index.html
+++ b/index.html
@@ -9,26 +9,30 @@
 </head>
 
 <body>
-
     <header>
         <div id="highScores" class="scores">View High Scores</div>
         <div id="timer" class="time">Time: 75</div>
     </header>
     <main>
         <section id="startQuiz" class="welcome">
-            <h1 id="question"><span>Coding Quiz Challenge</span></h1>
-            <p id="welcome">Try to answer the following code-related questions within the time limit. Keep in mind that
-                incorrect answers will penalize your score/time by ten seconds!</p>
-            <div class="welcomeBtn"><button id="btn" class="quizBtn">Take Quiz</button></div>
+            <h1 id="welcomeH1"><span>Coding Quiz Challenge</span></h1>
+            <p id="welcome">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+            <div class="welcomeBtn"><button id="start" class="quizBtn">Take Quiz</button></div>
         </section>
 
         <section id="takeQuiz" class="quizContent">
             <div id="quizQuestions" class="quizQuestions">
-                <h1 id="question">Question goes here</h1>
-                <div><button id="btn" class="quizBtn">answer</button></div>
-                <div><button id="btn" class="quizBtn">answer</button></div>
-                <div><button id="btn" class="quizBtn">answer</button></div>
-                <div><button id="btn" class="quizBtn">answer</button></div>
+                <h1 id="question"></h1>
+                <div id="choices">
+                   <div id="choice"></div>
+
+
+                    
+                    <!--<div><button id="1" class="choice"></button></div>
+                    <div><button id="2" class="choice"></button></div>
+                    <div><button id="3" class="choice"></button></div>
+                    <div><button id="4" class="choice"></button></div>-->
+                </div>
             </div>
 
 
@@ -57,7 +61,7 @@
             </div>
         </section>
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/test.js"></script>
 
 </body>
 
