Coded asynch button clicking through answers.  fixed array.

--- a/index.html
+++ b/index.html
@@ -17,21 +17,18 @@
         <section id="startQuiz" class="welcome">
             <h1 id="welcomeH1"><span>Coding Quiz Challenge</span></h1>
             <p id="welcome">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-            <div class="welcomeBtn"><button id="start" class="quizBtn">Take Quiz</button></div>
+            <div class="welcomeBtn"><button id="start" class="btn">Take Quiz</button></div>
         </section>
 
-        <section id="takeQuiz" class="quizContent">
-            <div id="quizQuestions" class="quizQuestions">
-                <h1 id="question"></h1>
-                <div id="choices">
-                   <div id="choice"></div>
-
-
-                    
-                    <!--<div><button id="1" class="choice"></button></div>
-                    <div><button id="2" class="choice"></button></div>
-                    <div><button id="3" class="choice"></button></div>
-                    <div><button id="4" class="choice"></button></div>-->
+        <section id="quizSection" class="quizContent">
+            <div id="questionDiv" class="quizQuestions">
+                <h1 id="questionHeader"></h1>
+                <div id="choiceDiv">
+                   
+                    <!--<button id="btn" class="btn"></button></div>
+                    <button id="btn" class="btn"></button></div>
+                    <button id="btn" class="btn"></button></div>
+                    <button id=btn" class="btn"></button></div>-->
                 </div>
             </div>
 
@@ -61,7 +58,7 @@
             </div>
         </section>
     </main>
-    <script src="./assets/js/test.js"></script>
+    <script src="./assets/js/test_array.js"></script>
 
 </body>
 
