--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body>
     <header>
         <div id="highScores" class="scores">View High Scores</div>
-        <div id="timer" class="time">Time: 75</div>
+        <div id="timer" class="time">Time: <span id="secondsLeft">75</span></div>
     </header>
     <main>
         <section id="startQuiz" class="welcome">
             <h1 id="welcomeH1"><span>Coding Quiz Challenge</span></h1>
-            <p id="welcome">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+            <p id="welcome">Try to answer the following code-related questions within the time limit. Keep in mind that
+                incorrect answers will penalize your score/time by ten seconds!</p>
             <div class="welcomeBtn"><button id="start" class="btn">Take Quiz</button></div>
         </section>
 
@@ -24,7 +25,7 @@
             <div id="questionDiv" class="quizQuestions">
                 <h1 id="questionHeader"></h1>
                 <div id="choiceDiv">
-                   
+
                     <!--<button id="btn" class="btn"></button></div>
                     <button id="btn" class="btn"></button></div>
                     <button id="btn" class="btn"></button></div>
@@ -33,30 +34,34 @@
             </div>
 
 
-            <div id="done" class="done">
 
-                <h1>All done!</h1>
-                <p>Your final score is <span="id"></span>.</p>
-                <form>
-                    <p>Enter initials
-                        <input type="text" id="inputInitials" name="inputInitials">
-                        <button class="initialBtn">Submit</button></p>
-                </form>
-            </div>
-            <div id="result" class="result">
-                <hr>
-                <p class="result">Wrong!</p>
-            </div>
-            <div id="listScores" class="scoreList">
-                <h1>High Scores</h1>
-                <ul id="scorelist">
-                    <li>Score goes here</li> 
-                </ul>
-                <button id="goBack"class="initialBtn">Go Back</button>
-                <button id="clearScores" class="initialBtn">Clear High Scores</button>
 
-            </div>
+
         </section>
+
+        <div id="yourScore" class="done">
+
+            <h1>All done!</h1>
+            <p>Your final score is <span id="score">0</span>.</p>
+            <form id="initialsForm">
+                <p>Enter initials</p>
+                <input type="text" id="inputInitials" name="inputInitials">
+                <button class="initialBtn" type="submit">Submit</button></p>
+            </form>
+        </div>
+        <div id="listScores" class="scoreList">
+            <h1>High Scores</h1>
+            <ul id="scorelist">
+                <li>Score goes here</li>
+            </ul>
+            <button id="goBack" class="initialBtn">Go Back</button>
+            <button id="clearScores" class="initialBtn">Clear High Scores</button>
+
+        </div>
+        <div id="answerResults" class="result">
+            <hr>
+            <p id="result">Wrong!</p>
+        </div>
     </main>
     <script src="./assets/js/test_array.js"></script>
 
