Working displaying getting item from Local Storage.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="highScores" class="scores">View High Scores</div>
-        <div id="timer" class="time">Time: <span id="secondsLeft">75</span></div>
+        <div id="timer" class="time">Time: <span id="secondsLeft">60</span></div>
     </header>
     <main>
         <section id="startQuiz" class="welcome">
@@ -40,7 +40,6 @@
         </section>
 
         <div id="yourScore" class="done">
-
             <h1>All done!</h1>
             <p>Your final score is <span id="score">0</span>.</p>
             <form id="initialsForm">
@@ -56,15 +55,12 @@
             </ul>
             <button id="goBack" class="initialBtn">Go Back</button>
             <button id="clearScores" class="initialBtn">Clear High Scores</button>
-
         </div>
         <div id="answerResults" class="result">
             <hr>
             <p id="result">Wrong!</p>
         </div>
     </main>
-    <script src="./assets/js/test_array.js"></script>
-
+    <script src="./assets/js/script.js"></script>
 </body>
-
 </html>
