Got high scores to display on page from localStorage.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
         </div>
         <div id="listScores" class="scoreList">
             <h1>High Scores</h1>
-            <ul id="scorelist">
-                <li>Score goes here</li>
-            </ul>
+            <table>
+                <tr id="scorelist">
+                    <td>Name</td><td> | </td><td>Score</td>
+                </tr>
+            </table>
+            <!--<ul id="scorelist">
+                //<li>Name | Score</li>
+            </ul>-->
             <button id="goBack" class="initialBtn">Go Back</button>
             <button id="clearScores" class="initialBtn">Clear High Scores</button>
         </div>
