Formatted High Scores page.

--- a/index.html
+++ b/index.html
@@ -50,14 +50,10 @@
         </div>
         <div id="listScores" class="scoreList">
             <h1>High Scores</h1>
-            <table>
-                <tr id="scorelist">
-                    <td>Name</td><td> | </td><td>Score</td>
-                </tr>
-            </table>
-            <!--<ul id="scorelist">
-                //<li>Name | Score</li>
-            </ul>-->
+            <div id="scorelist" class="scoreCenter">
+               <div id="initials"></div>
+               <div id="scoreDisplay"></div>
+            </div>
             <button id="goBack" class="initialBtn">Go Back</button>
             <button id="clearScores" class="initialBtn">Clear High Scores</button>
         </div>
