Added email validator

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 id="welcomeH1"><span>Coding Quiz Challenge</span></h1>
             <p id="welcome">Try to answer the following code-related questions within the time limit. Keep in mind that
                 incorrect answers will penalize your score/time by ten seconds!</p>
-            <div class="welcomeBtn"><button id="start" class="btn">Take Quiz</button></div>
+            <div class="welcomeBtn"><button id="start">Take Quiz</button></div>
         </section>
 
         <section id="quizSection" class="quizContent">
