Fixed highscores button access when quiz in progress.  Cleaned up code.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Code Quiz</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
-
 <body>
     <header>
-        <div id="highScores" class="scores">View High Scores</div>
         <div id="timer" class="time">Time: <span id="secondsLeft">60</span></div>
+        <div id="highScores" class="scores">View High Scores</div>
     </header>
     <main>
         <section id="startQuiz" class="welcome">
@@ -25,15 +23,10 @@
             <div id="questionDiv" class="quizQuestions">
                 <h1 id="questionHeader"></h1>
                 <div id="choiceDiv">
-
-                    <!--<button id="btn" class="btn"></button></div>
-                    <button id="btn" class="btn"></button></div>
-                    <button id="btn" class="btn"></button></div>
-                    <button id=btn" class="btn"></button></div>-->
+                    <!--<button id=btn" class="btn"></button></div> To be added by JS-->
                 </div>
             </div>
         </section>
-
         <div id="yourScore" class="done">
             <h1>All done!</h1>
             <p>Your final score is <span id="score">0</span>.</p>
