--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <p>Enter initials</p>
                 <input type="text" id="inputInitials" name="inputInitials">
                 <button class="initialBtn" type="submit">Submit</button></p>
+                <br>
+                <p id = "validate"></p>
             </form>
         </div>
         <div id="listScores" class="scoreList">
