Changed a few divs to sections.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </section>
-        <div id="yourScore" class="done">
+        <section id="yourScore" class="done">
             <h1>All done!</h1>
             <p>Your final score is <span id="score">0</span>.</p>
             <form id="initialsForm">
@@ -37,8 +37,8 @@
                 <br>
                 <p id = "validate"></p>
             </form>
-        </div>
-        <div id="listScores" class="scoreList">
+        </section>
+        <section id="listScores" class="scoreList">
             <h1>High Scores</h1>
             <div id="scorelist" class="scoreCenter">
                <div id="initials"></div>
@@ -46,11 +46,11 @@
             </div>
             <button id="goBack" class="initialBtn">Go Back</button>
             <button id="clearScores" class="initialBtn">Clear High Scores</button>
-        </div>
-        <div id="answerResults" class="result">
+        </section>
+        <section id="answerResults" class="result">
             <hr>
             <p id="result">Wrong!</p>
-        </div>
+        </section>
     </main>
     <script src="./assets/js/script.js"></script>
 </body>
